[audit] Chore: do not write minor updates (seen flag changes) to audit log